modules/grammars/ide/src/test/resources/cocos/valid/CircularDependencyModule.ide
package valid

typedef module CircularDependencyModule {
    module sub: CircularDependencySubModule
}
