modules/grammars/ide/src/test/resources/cocos/invalid/OptionFillType.ide
package invalid

typedef module OptionFillType {
    configuration config: OptionFillTypeConfiguration {
        fill common with true
    }
}
